syntax = "proto3";

package action;

option java_package = "com.bazelgrpc.demo.action";
option java_outer_classname = "ActionServiceProto";

import 'proto/annotate/annotate.proto';
import 'proto/poll/poll.proto';

//TODOD : renambe to ActionService
service ActionManagement {
  rpc initializePage(InitializePageRequest) returns (InitializePageResponse);
}

message InitializePageRequest {
    string url = 1;
}

message InitializePageResponse{
	repeated poll.Poll polls = 1;
  repeated annotate.AnnotatePost annotate_posts = 2;
}